fixed dark mode

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,3 @@
-.scrollParent {
-	scroll-snap-type: y mandatory;
-	overflow: scroll;
-	height: 100vh;
-}
-
 .container {
 	padding: 0 2rem;
 	display: flex;
@@ -24,34 +18,14 @@
 }
 
 .welcome {
-	scroll-snap-align: center;
 	min-height: 100vh;
 }
 
 .categoryTree {
-	scroll-snap-align: start;
 	min-height: 100vh;
 	width: 100%;
 	max-width: 600px;
 	margin: 0 auto;
-}
-
-.footer {
-	width: 100%;
-	display: flex;
-	flex: 1;
-	padding: 2rem 0;
-	border-top: 1px solid #eaeaea;
-	justify-content: center;
-	align-items: center;
-	scroll-snap-align: end;
-}
-
-.footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
 }
 
 .title a {
