--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 html,
 body {
   height: 100vh;
-  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -15,13 +14,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-.content {
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.fadeIn {
-  opacity: 1;
 }
